--- a/2ndProject/WebContent/데이터분석하기.html
+++ b/2ndProject/WebContent/데이터분석하기.html
@@ -73,14 +73,12 @@
                 <div class="top-menu">
                     <div class="row">
                         <div class="col-xs-3">
-                            <div id="fh5co-logo"><a href="index.html">감정의 온도</a></div>
+                            <div id="fh5co-logo"><a href="home.html">감정의 온도</a></div>
                         </div>
                         <div class="col-xs-9 text-right menu-1">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="work.html">Work</a></li>
-                                <li class="has-dropdown active">
-                                    <a href="blog.html">Blog</a>
+                                <li class="has-dropdown">
+                                    <a href="데이터분석하기.html">데이터 분석하기</a>
                                     <ul class="dropdown">
                                         <li><a href="#">Web Design</a></li>
                                         <li><a href="#">eCommerce</a></li>
@@ -88,7 +86,16 @@
                                         <li><a href="#">API</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="about.html">About</a></li>
+                                <li class="has-dropdown">
+                                    <a href="기억창고.html">기억창고</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Web Design</a></li>
+                                        <li><a href="#">eCommerce</a></li>
+                                        <li><a href="#">Branding</a></li>
+                                        <li><a href="#">API</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="home.html">로그아웃</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
