--- a/2ndProject/WebContent/home.html
+++ b/2ndProject/WebContent/home.html
@@ -105,8 +105,8 @@
             </div>
         </nav>
         <div class="container-wrap">
-            <div class="mp4">
-                <h1>시연영상</h1>
+            <div class="trailer">
+                <h1>시연영상!!!!</h1>
             </div>                                       
             <div id="fh5co-services">
                 <div class="row">
